<resources>
    <string name="app_name">Assignment</string>
    <string name="profile">Profile</string>
    <string name="courses">Courses</string>
    <string name="course">Course</string>
    <string name="assignments">Assignments</string>
    <string name="assignment">Assignment</string>
    <string name="NameHint">Name</string>
    <string name="PasswordHint">Password</string>
    <string name="PhoneHint">Phone</string>
    <string name="EmailHint">Email</string>
    <string name="LoginBtn">Login</string>
    <string name="SignUpBtn">Create Account</string>
    <string name="UpdateBtn">Update</string>
    <string name="CheckBoxTeacher">Teacher</string>
    <string name="CheckBoxStudent">Student</string>
    <string name="CourseName">Course Name</string>
    <string name="CoursePoint">Course Point</string>
    <string name="FirstSemester">First Semester</string>
    <string name="SecondSemester">Second Semester</string>

    <!-- Course Fragment -->
    <string name="AddAssignmentBtn">Add Assignment</string>
    <string name="UpdateCourseBtn">Update</string>

    <!-- Add Assignment-->
    <string name="StartTime">Start Time</string>
    <string name="EndTime">End Time</string>
    <string name="TypeOfWork">Type Of Work</string>
    <string name="Description">Description</string>
    <string name="Motivation">Motivation</string>
    <string name="UploadBtn">Upload Assignment</string>
    <string name="SubmitBtn">Submit</string>
    <string name="Delete">Delete</string>

    <string name="LinkSignUpHint">No account yet? Create one</string>
    <string name="LinkLoginHint">Already a member? Login</string>

    <!--Navigation Drawer Menu label-->
    <string name="nav_Home">Home</string>
    <string name="nav_addCourse">Add Course</string>
    <string name="nav_Profile">Profile</string>
    <string name="nav_logout">Log Out</string>

    <!--Toolbar titles when navigation menu is selected-->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Add Course</item>
        <item>Profile</item>
        <item>Logout</item>
    </string-array>


    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="points">Points</string>
    <string name="semester">Semester</string>
    <string name="AddCourse">Add Course</string>
    <string name="Save">Save</string>
    <string name="done">Done</string>
    <string name="description_textView">Description :</string>
    <string name="course_description_hint">course overview...</string>
    <string name="course_points_textview">Points :</string>
    <string name="course_name_textView">Name :</string>
    <string name="registered_student">Registered Students : </string>


</resources>
