<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.aliosama.assignment.Activity.SignUpActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="26dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/ic_assign"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="14dp"
            android:layout_gravity="center_horizontal" />

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="#E0E0E0">
            <EditText android:id="@+id/ETSingUpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/NameHint"
                android:textColor="#FFFFFF"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Phone Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="#E0E0E0">
            <EditText android:id="@+id/ETSingUpPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/PhoneHint"
                android:textColor="#FFFFFF" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="#E0E0E0">
            <EditText android:id="@+id/ETSingUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/EmailHint"
                android:textColor="#FFFFFF"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="#E0E0E0">
            <EditText android:id="@+id/ETSingUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/PasswordHint"
                android:textColor="#FFFFFF" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBoxStudentSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/CheckBoxStudent"
                android:layout_weight="2"
                android:gravity="fill_vertical"
                android:textColor="#E0E0E0"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBoxTeacherSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/CheckBoxTeacher"
                android:layout_weight="1"
                android:gravity="fill_vertical"
                android:textColor="#E0E0E0"/>
        </LinearLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/RegisterBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/SignUpBtn"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textColor="#FAFAFA"/>

        <TextView android:id="@+id/LoginLinkTV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/LinkLoginHint"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#E0E0E0"/>

    </LinearLayout>
</ScrollView>
