<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aliosama.assignment.Activity.AddCourseActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/AppbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_course_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <ProgressBar
                android:id="@+id/add_course_ProgressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Name : "
                    android:textSize="18sp"
                    android:gravity="center_vertical"/>
                <EditText
                    android:id="@+id/add_course_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CourseName"
                    android:inputType="textPersonName"
                    android:gravity="center_vertical"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="2dp" />


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/course_points_textview"
                android:textSize="18sp"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/add_course_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/points"
                android:gravity="center_vertical"
                android:inputType="number"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/description_textView"
                    android:textSize="18sp"
                    android:gravity="top"/>
                <EditText android:id="@+id/add_course_Description"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:inputType="textMultiLine"
                    android:background="@drawable/edittext_style"
                    android:gravity="top"
                    android:hint="@string/course_description_hint"
                    android:layout_marginTop="15dp"
                    android:paddingTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FirstSemester"
                    android:textColor="@color/black" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/SecondSemester"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
